src/tests/errors/parsing/test03.cmp
program p begin   
  procedure a (x:int,)   (* comma is a separator, not terminator *)
  begin 
   in
  end
end  
